[package]
name = "groth16_stress_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
ether = "0.1.4"
ethers = { version = "2.0.14", features = ["rustls"] }
hdrhistogram = "7.5.4"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.18", features = ["derive"] }
walkdir = "2.5.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
chrono = "0.4.38"
